--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
+  IgnoredMethods: ['describe']
   Max: 30
 
 Style/Documentation:
