--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: shopify_intern_challenge_production
   username: shopify_intern_challenge
   password: <%= ENV["SHOPIFY_INTERN_CHALLENGE_DATABASE_PASSWORD"] %>
