correct linter errors

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -10,7 +10,10 @@
             "apply",
             "variants",
             "responsive",
-            "screen"
+            "screen",
+            "include",
+            "mixin",
+            "if"
           ]
         }
       ],
